[package]
name = "superconsole"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
crossterm = "0.20"
itertools = "0.10.0"
unicode-segmentation = "1.7"
# @oss-disable: gazebo = { path = "../gazebo/gazebo" }
gazebo = "0.4" # @oss-enable
# @oss-disable: gazebo_lint = { path = "../gazebo_lint/gazebo_lint", optional = true }
thiserror = "1"
termwiz = "0.15"

[features]
default = []
# Custom linter requires nightly, so it is not included by default
custom_linter = ["gazebo_lint"]

[dev-dependencies]
tokio = { version = "1.5", features = ["macros", "rt-multi-thread", "time"]}
lipsum = "0.7"
derive_more = "0.99"
